finished oh and esh architecture background

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -74,6 +74,49 @@ year = {2017},
 note = {e3323 IJCS-16-0515.R1},
 }
 
+@misc{openhab_01,
+ author = {Kai Kreuzer},
+ title = {openHAB2 has arrived!},
+ year = {2017},
+ month = {January},
+ howpublished = {\url{http://www.openhabfoundation.org/2017/openhab2}}
+}
+
+@misc{openhab_02,
+  author = {The openHAB Community and the openHAB Foundation e.V.},
+  title = {About openHAB},
+  note = {Access date: 2018-05-13},
+  howpublished = {\url{https://docs.openhab.org/introduction.html}}
+}
+
+@misc{openhab_03,
+  author = {Kai Kreuzer},
+  title = {Privacy in the Smart Home - Why we need an Intranet of Things},
+  year = {2014},
+  month = {February},
+  howpublished = {\url{https://kaikreuzer.blogspot.com.ee/2014/02/privacy-in-smart-home-why-we-need.html}}
+}
+
+@article{esh_01,
+title = "Just a Smart Home or Your Smart Home – A Framework for Personalized User Interfaces Based on Eclipse Smart Home and Universal Remote Console",
+journal = "Procedia Computer Science",
+volume = "98",
+pages = "107 - 116",
+year = "2016",
+note = "The 7th International Conference on Emerging Ubiquitous Systems and Pervasive Networks (EUSPN 2016)/The 6th International Conference on Current and Future Trends of Information and Communication Technologies in Healthcare (ICTH-2016)/Affiliated Workshops",
+issn = "1877-0509",
+doi = "https://doi.org/10.1016/j.procs.2016.09.018",
+url = "http://www.sciencedirect.com/science/article/pii/S1877050916321391",
+author = "Lukas Smirek and Gottfried Zimmermann and Michael Beigl",
+keywords = "Smart Home, AAL, Personalisation, User Interface, Eclipse Smart Home, Universal Remote Console"
+}
+
+@misc{esh_02,
+  title = {Building IoT systems with openHAB},
+  author = {Matt Porter},
+  note = {Date accessed: 2018-05-13},
+  howpublished = {\url{https://events.static.linuxfound.org/sites/events/files/slides/Building\%20IoT\%20systems\%20with\%20openHAB_0.pdf}}
+}
 
 
 @misc{rest_01,
