started related works

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -118,6 +118,42 @@ keywords = "Smart Home, AAL, Personalisation, User Interface, Eclipse Smart Home
   howpublished = {\url{https://events.static.linuxfound.org/sites/events/files/slides/Building\%20IoT\%20systems\%20with\%20openHAB_0.pdf}}
 }
 
+@misc{related_01,
+  author = {Nest labs},
+  title = {Keeping data safe at Nest},
+  note = {Date accessed: 2018-02-12},
+  howpublished = {\url{https://nest.com/privacy/data/}}
+}
+
+@misc{related_02,
+ author = {Apple Inc},
+ title = {Using the HomeKit Accessory Protocol Specification},
+ note = {Date accessed: 2018-02-12},
+ howpublished = {\url{https://developer.apple.com/support/homekit-accessory-protocol/}}
+}
+
+@misc{related_03,
+ title = {Apple apologizes, issues MAC login security patch},
+ author = {Jonny Evans},
+ note = {Date accessed: 2018-02-12},
+ howpublished = {\url{https://blogs.computerworld.com/article/3239027/apple-mac/apple-apologizes-issues-mac-login-security-patch.html}}
+}
+
+@misc{related_04,
+title = {Home Automation},
+author = {Open Remote Inc},
+note = {Accessed on 2018-02-12},
+howpublished = {\url{http://www.openremote.com/home-automation-2/}}
+}
+
+
+@misc{related_05,
+title = {Security in OpenRemote},
+author = {Vincent Kriek},
+note = {Accessed on 2018-02-12},
+howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security\%20in\%20OpenRemote.html}}
+}
+
 
 @misc{rest_01,
  author = {W3C Working Group},
