finished related work and discussiongit add master-thesis.bib !

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -154,6 +154,70 @@ note = {Accessed on 2018-02-12},
 howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security\%20in\%20OpenRemote.html}}
 }
 
+@misc{related_06,
+ author = {ThingsBoard},
+ title = {ThingsBoard IoT Platform},
+ note = {Date of access: 2018-02-12},
+ howpublished = {\url{https://thingsboard.io/}}
+}
+
+@misc{related_07,
+ author = {ThingsBoard},
+ title = {ThingsBoard Architecture},
+ note = {Date of access: 2018-02-12},
+ howpublished = {\url{https://thingsboard.io/docs/reference/architecture/#security}}
+}
+
+@misc{related_08,
+  author = {Blixa Morgan and Brendan T. Hill},
+  title = {The Thing System: The Trouble with Things},
+  note = {Date of access: 2018-05-13},
+  howpublished = {\url{http://thethingsystem.com/things/index.html}}
+}
+
+@misc{related_09,
+  author = {Blixa Morgan and Brendan T. Hill},
+  title = {The Security Model},
+  note = {Date of access: 2018-05-13},
+  howpublished = {\url{http://thethingsystem.com/dev/The-Security-Model.html}}
+}
+
+@misc{related_10,
+  author = {Home Assistant community},
+  title = {Home Assistant // HASS Configurator},
+  note = {Date of access: 2018-05-13},
+  howpublished = {\url{https://www.home-assistant.io/docs/ecosystem/hass-configurator/#feature-list}}
+}
+
+@misc{related_11,
+ author = {Eric Brown},
+ title = {Secure home automation, without clouds or dedicated hubs},
+ year = {2016},
+ month = {June},
+ howpublished = {\url{http://linuxgizmos.com/secure-home-automation-without-clouds-or-dedicated-hubs/}}
+}
+
+@misc{related_12,
+ author = {Home Assistant community},
+ title = {Home Assistant // Securing},
+ note = {Date of access: 2018-05-13},
+ howpublished = {\url{https://www.home-assistant.io/docs/configuration/securing/}}
+}
+
+@techreport{RFC6238,
+ author = {D. M'Raihi and S. Machani and M. Pei and J. Rydell},
+ title = {TOTP: Time-Based One-Time Password Algorithm},
+ howpublished = {Internet Requests for Comments},
+ type = {RFC},
+ number = {6238},
+ year = {2011},
+ month = {May},
+ issn = {2070-1721},
+ publisher = {RFC Editor},
+ institution = {RFC Editor},
+ url = {http://www.rfc-editor.org/rfc/rfc6238.txt},
+ note = {\url{http://www.rfc-editor.org/rfc/rfc6238.txt}},
+}		
 
 @misc{rest_01,
  author = {W3C Working Group},
