--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -642,23 +642,48 @@ There is also hardware security in place. HomeKit introduced an \emph{authentica
 
 In early December 2017, a vulnerability in the Apple ecosystem, including HomeKit, allowed anyone with a valid MAC address to login as a root in the system~\cite{related_03}, without providing a valid password. It was promptly patched in a security update, followed by an apology by Apple.
 
-\subsection{openRemote}
+\subsection{OpenRemote}
 
-~\cite{related_04}
-    It has three components: online designer software, the controller (hardware), and App/Panel front end. 
-    From the forums: https://openremote.github.io/archive-dotorg/forums/      
-    No authentication comes by default, but it can be enabled through Apache Tomcat's  configuration files.
-    It also offers a REST API which doesn't require authentication at all.
-    There was an effort to allow authentication through PKI and TLS. The controller creates certificates for the authorized users and acts as a CA. This never got integrated into the main branch of development~\cite{related_05}. 
+OpenRemote is a flexible and open-ended solution for creating home automation environments. It is comprised of three components: online designer software, the controller (hardware), and app/panel front end~\cite{related_04}. In OpenRemote, no authentication is enforced by default, but it can be enabled through Apache Tomcat's configuration files. Furthermore, OpenRemote exposes a REST API which does not require authentication at all, and thus, no access control is enforced.
 
+There was an effort to allow authentication through Public-Key Infrastructure (PKI) and transport encryption through the TLS protocol. In the proposed solution, the controller creates public-key certificates for the authorized users and acts as a certificate authority (CA). However, this solution never got integrated into the main branch of development~\cite{related_05}. 
 
-\subsection{Thingsboard}
-\subsection{the thing system}
+\subsection{ThingsBoard}
+
+ThingsBoard is a more general open-source solution for the IoT. It may be used to design solutions for smart farming, grid, telemetry, home automation, etc.~\cite{related_06}.
+
+With respect to security, the technical documentation covers two aspects: transport encryption and device authentication. For the former, system administrator of a ThingsBoard instance can configure it to support HTTPS connections and MQTT transports. However, DTLS for CoAP is not supported yet. For device authentication, ThingsBoard can support various types of device credentials. Current release provides support for token-based credentials for all protocols, and additionally supports X.509 certificates for the MQTT protocol~\cite{related_07}.
+
+\subsection{The Thing System}
+
+The Thing System is an open-source set of highly-extensible software components developed in node.js and network protocols to connect Things, independent of their vendor, into a heterogenous environment~\cite{related_08}.
+
+The Thing System enforces by default access control mechanisms, and recognizes that a single user may have more than one client (e.g. smart phone, laptop, tablet, etc.). If there are no users configured, the first access to the system instance may create the first user. Every time a user is created, a time-based one-time password is sent by the system. Since the process is compliant with the RFC 6238~\cite{RFC6238}, Google Authenticators and other programs may be used for web-based access.
+
+Any created client may have one role out of: master, resident, guest, device, cloud. The first three roles is meant for regular users to a varying degree of permissions inside the core of The Things System. The cloud role is assigned to services accessed through the Internet, and the device role, as its name implies, is assigned to devices to be made part of the environment~\cite{related_08}. 
+
+In the future it is planned to implement a special sort of firewall to filter incoming traffic to the IoT environment. The devices would need to be on a separate network, however.
+
 \subsection{Home Assistant}
 
+As an open-source home automation platform created with Python 3, it aims to automate control of all devices at home in an heterogenous environment.
+
+In terms of security, the Home Assistant follows an approach of \emph{Intranet of Things} for two reasons: to maintain functionality even when an Internet connection is not available, and to keep private data from leaving the local instance~\cite{related_11}.
+
+As part of the documentation, several guidelines are given to protect the security of the Home Assistant instance, even if it is enclosed in the local area network~\cite{related_12}. These recommendations work for any typical web application hosted in a private network that is open to the Internet. In particularly, some advice is given on how to integrate the Home Assistant into the Tor network for the sake of preserving privacy on top of confidentiality. Other than this, the command line tool for the Home Assistant, HASS, supports authentication for a single user. The credentials are hard-coded into the configuration files, and once a user has authenticated, it is capable of enabling IP filtering~\cite{related_10}.
+
 \subsection{Discussion}
-Talk about intranet of things --- single point of access
-OH stores NO data.
+
+As the works presented in this section are complete solutions for home automation, they do not strictly relate to the contributions made for openHAB and Eclipse SmartHome. However, they were included in this work from a security point of view, i.e.: by giving an overview kind of the security mechanisms and access control policies defined and enforced for each.
+
+In particular, Home Assistant is the one that mostly resembles openHAB in terms of functionality and security philosophy. For the sake of preserving privacy, both systems can fully operate without having an active Internet connection, thus ensuring that no data from the devices is stored in third-party servers. Since it is assumed that no unauthorized party has access to the private network, and therefore the system's UI and REST API, no serious access control mechanims are implemented. However, this is not sufficient for either because users may not be of equal standing, and some operations could be restricted for a particular user.
+
+The access control mechanisms in The Thing System is, in part, what openHAB should strive to incorporate. With a role-based access control model, it is possible to differentiate users according to their privileges. Furthermore, by keeping profiles of devices and cloud services, it reduces the risk of spoofing. However, the authorization model implemented in The Thing System is not suitable for a escalable environment, since the quantity of Things and their capabilities will only increase with time.
+
+The current state of OpenRemote and ThingsBoard greatly resemble that of openHAB. All three support the use of encrypted connections through HTTPS, although configuration varies depending on the web server for each solution. OpenRemote could have in place a reasonable access control mechanism for its REST API if the external contribution had been adopted.
+
+Due to their proprietary nature, HomeKit and NEST are the ones that most distant from openHAB in terms of functionality and interoperability. HomeKit and NEST both mandatorily require an active Internet connection at all times, and thus all data is stored in the cloud. Meanwhile, openHAB out of the box can operate without having to depend on access to the Internet. In terms of security, HomeKit introduces a novel hardware approach which would prevent device spoofing. In contrast, NEST provides a \emph{proof-of-posession} authentication mechanism to authenticate with the web services. Due to the specific nature of the hardware, neither solution would be able to be implemented in openHAB. 
+
 \newpage
 \section{Methodology}
 \label{sec:method}
@@ -1229,6 +1254,10 @@ Tip: We can use minipage to create a frame around some important information.
 Bearer token. The digest of the user credentials to be used in an authentication process.
 Manifest. Configuration file for OSGi bundles that define the bundle's unique identification, packages imported from other bundles, and packages to make available to other bundles.
 IP. Internet Protocol.
+CoAP.
+HTTPS.
+MQTT.
+Spoofing.
 
 \newpage
 
