--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -277,19 +277,16 @@ Informaatika õppekava\\%[2mm]
 \noindent\textbf{Abstract:}
 
 \noindent
-Many interpreting program languages are dynamically typed, such as Visual Basic or Python. As a result, it is easy to write programs that crash due to mismatches of provided and expected data types.  One possible solution to this problem is automatic type derivation during compilation. In this work, we consider study how to detect type errors in the \textsc{Whitespace} language by using fourth order logic formulae as annotations. The main result of this thesis is a new triple-exponential type inference algorithm for the fourth order logic formulae. This is a significant advancement as the question whether there exists such an algorithm was an open question. 
-All previous attempts to solve the problem lead lead to logical inconsistencies or required tedious user interaction in terms of interpretative dance. Although the resulting algorithm is slightly inefficient, it can be used to detect obscure programming bugs in the \textsc{Whitespace} language. The latter significantly improves productivity. Our practical experiments showed that productivity is comparable to average Java programmer.   
-From a theoretical viewpoint, the result is only a small advancement in rigorous treatment of higher order logic formulae. The results obtained by us do not generalise to formulae with the fifth or higher order. 
+The Internet of Things (IoT) is a dynamic and heterogenous environment where \emph{Things} gather data from the real world to perform various tasks. Applications in IoT, such as the smart home, typically use private data derived from its users for its operations. Security becomes a concern when these applications are exposed to insecure networks. OpenHAB is an OSGi-based an automation software that integrates the data from devices at home. OpenHAB does not enforce any access control mechanism for its users, and depends solely on the security of the wireless network. In this work, we implement a JSON Web Token-based authenticator for openHAB as a base for access control mechanisms. Furthermore, we propose a somewhat-grained authorization model to manage access permissions to Things among legitimate users. The results obtained show that it is feasible to enforce access control mechanisms for servlet and REST resources in the architecture of openHAB. 
 
 \vspace*{1ex}
 
 \noindent\textbf{Keywords:}\\
-\TODO{List of keywords}
+Internet of Things, IoT, smart home, openHAB, Eclipse SmartHome, JSON Web Token, JWT, authentication, authorization, access control, misuse cases, OSGi 
 %Layout, formatting, template
-\TODO{CERCS code}
 \vspace*{1ex}
 
-\noindent\textbf{CERCS:}\TODO{CERCS code and name:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}
+\noindent\textbf{CERCS:} P170 - Computer science, numerical analysis, systems, control
 
 \vspace*{1ex}
 }}%\newcommand\EngInfo
@@ -303,18 +300,9 @@ From a theoretical viewpoint, the result is only a small advancement in rigorous
 
 \noindent\textbf{Lühikokkuvõte:} 
 
-%\noindent ...
+\noindent
+Estonian translation goes here...
 
-\TODO{One or two sentences providing a basic introduction to the field, comprehensible to a scientist in
-any discipline.}
-\TODO{Two to three sentences of
-more detailed background, comprehensible to scientists in related disciplines.}
-\TODO{One sentence clearly stating the general problem being addressed by this particular
-study.}
-\TODO{One sentence summarising the main result (with the words ``here we show´´ or their equivalent).}
-\TODO{Two or three sentences explaining what the main result reveals in direct comparison to what was thought to be the case previously, or how the main result adds to previous knowledge.}
-\TODO{One or two sentences to put the results into a more general context.}
-\TODO{Two or three sentences to provide a broader perspective, readily comprehensible to a scientist in any discipline, may be included in the first paragraph if the editor considers that the accessibility of the paper is significantly enhanced by their inclusion.}
 
 \vspace*{1ex}
 
@@ -324,7 +312,7 @@ study.}
 
 \vspace*{1ex}
 
-\noindent\textbf{CERCS:}\TODO{CERCS kood ja nimetus:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}
+\noindent\textbf{CERCS:} P170 - Arvutiteadus, arvutusmeetodid, süsteemid, juhtimine (automaatjuhtimisteooria)
 
 \vspace*{1ex}
 }}%\newcommand\EstInfo
