--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -13,6 +13,13 @@
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
 % Orange: the future of digital trust https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf
 
+@misc{nimbus,
+  title = {Nimbus JOSE + JWT},
+  author = {Connect2id},
+  note = {Date of access: 2018-04-01}
+  howpublished = {\url{https://connect2id.com/products/nimbus-jose-jwt}}
+}
+
 @article{ALABA201710,
 title = "Internet of Things security: A survey",
 journal = "Journal of Network and Computer Applications",
@@ -116,6 +123,13 @@ keywords = "Smart Home, AAL, Personalisation, User Interface, Eclipse Smart Home
   author = {Matt Porter},
   note = {Date accessed: 2018-05-13},
   howpublished = {\url{https://events.static.linuxfound.org/sites/events/files/slides/Building\%20IoT\%20systems\%20with\%20openHAB_0.pdf}}
+}
+
+@misc{esh_03,
+  title = {Add support for conditional access based on user role},
+  author = {Kai Kreuzer and Lukazs Dywicki and Mehmet Arziman and Markus Rathgeb},
+  howpublished = {\url{https://github.com/eclipse/smarthome/issues/579}},
+  note = {Date accessed: 2018-05-14}
 }
 
 @misc{related_01,
