added evaluation chapter!

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -13,10 +13,18 @@
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
 % Orange: the future of digital trust https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf
 
+@misc{repo_extra,
+  title = {JWT and Basic Authenticator implementation outside of Eclipse SmartHome},
+  author = {Jesus Soto},
+  year = {2018},
+  month = {April},
+  howpublished = {\url{https://github.com/antoniosv/iot-sec-thesis/tree/master/org.dreamland.whitefilter}}
+}
+
 @misc{nimbus,
   title = {Nimbus JOSE + JWT},
   author = {Connect2id},
-  note = {Date of access: 2018-04-01}
+  note = {Date of access: 2018-04-01},
   howpublished = {\url{https://connect2id.com/products/nimbus-jose-jwt}}
 }
 
