--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -828,7 +828,7 @@ As part of the OSGi version 6 specification, filters may be registered to any re
 
 As development of the Eclipse Smarthome halted, a new direction involving traditional servlet security was considered for this work. As part of servlet registration to the OSGi runtime, an entity called \texttt{HttpContext} has to be provided. This entity provides the means to intercept HTTP requests before they reach the servlet, and thus it becomes the point where authentication and authorization may be implemented. Originally, this approach was discarded because the REST endpoints did not support the use of \texttt{HttpContext} alongside its registration. The key in this case is that both groups of servlets, the traditional and the REST servlet, run under different application contexts. What this means is that, even if a traditional servlet handles authentication properly, this information would not be propagated to the REST endpoints, and thus authorization mechanisms would not be enforced. In the months of March and April, however, part of the community started an effort to combine, or rather, to \emph{share} the provided \texttt{HttpContext} among servlets and REST endpoints.
 
-Figure \ref{fig:esh_auth_arch} shows at a very high level the underlying architecture of the Eclipse SmartHome runtime. At the lowest level, the Jetty HTTP server and servlet engine is running. On top of it, there are several servlets running separately. Part of these servlets may be associated as being \emph{traditional}, while a particular servlet, the REST servlet, runs under different conditions. The REST servlet is used to serve resources, such as things, items, channels, etc. The Chart and Icon servlets, are of the traditional kind and thus, run under the same shared application context. Meanwhile, the REST servlet is shown to run under an isolated application context. Thus, the solution worked on by the community is to \textbf{bridge} both contexts and therefore have a commonly shared \texttt{HttpContext}~\ref{esh_03}. Yellow boxes represent the entities or resources that should have its access restricted according to a specified policy. Green boxes represent the possible solution to the problem, whereas the red boxes are the attempted solutions in previous years. Particularly, ``JAX-RS Custom ContainerContext'' was an attempted solution by the community, which had many problems when ported into the actual openHAB product. An alternative solution to it, the ``JAX-RS Custom Filter'' was originally planned to be implemented for this work, but the notion was discarded after understanding the limitations of this kind of filter, since it would not enforce authorization for the rest of the servlets (e.g. Icon servlet). 
+Figure \ref{fig:esh_auth_arch} shows at a very high level the underlying architecture of the Eclipse SmartHome runtime. At the lowest level, the Jetty HTTP server and servlet engine is running. On top of it, there are several servlets running separately. Part of these servlets may be associated as being \emph{traditional}, while a particular servlet, the REST servlet, runs under different conditions. The REST servlet is used to serve resources, such as things, items, channels, etc. The Chart and Icon servlets, are of the traditional kind and thus, run under the same shared application context. Meanwhile, the REST servlet is shown to run under an isolated application context. Thus, the solution worked on by the community is to \textbf{bridge} both contexts and therefore have a commonly shared \texttt{HttpContext}~\cite{esh_03}. Yellow boxes represent the entities or resources that should have its access restricted according to a specified policy. Green boxes represent the possible solution to the problem, whereas the red boxes are the attempted solutions in previous years. Particularly, ``JAX-RS Custom ContainerContext'' was an attempted solution by the community, which had many problems when ported into the actual openHAB product. An alternative solution to it, the ``JAX-RS Custom Filter'' was originally planned to be implemented for this work, but the notion was discarded after understanding the limitations of this kind of filter, since it would not enforce authorization for the rest of the servlets (e.g. Icon servlet). 
 
 \begin{figure} [ht] 
 \begin{center}
@@ -970,7 +970,16 @@ The proposed authorization model fulfills the purpose noted at the beginning of 
 \newpage
 \section{Evaluation}
 \label{sec:eval}
-\TODO{Short description of what this section is about}
+
+As one of the main contributions for this work, the implementation of two authenticators: basic and JSON Web Token-based, results in a bundle for the OSGi environment. This chapter looks at the resulting bundle and how it is used alongside the other bundles for the Eclipse SmartHome distribution (ESH). Recall that the ESH framework is a core component for the openHAB automation software. Thus, if the solution does not work in ESH, it will not work on openHAB.
+
+The first successful attempt at implementing the authenticators was made outside the ESH ecosystem~\cite{repo_extra}. Instead of relying on the Equinox OSGi runtime 4.2 that ESH is based on, the deployment was made for Apache Karaf 4.2, which supported up to OSGi 6. This implementation included an activator of the bundle, a servlet, and a custom \texttt{HttpContext} to intercept the HTTP request. The goal is to have a servlet published as an HTTP service in the OSGi runtime. However, any request to this servlet is intercepted by the \texttt{handleSecurity} method of the custom \texttt{HttpContext}, which decides if the request goes through or not. In this case, it contained the logic for basic and JWT authentication. This implementation was first built with Maven using \texttt{\$ mvn clean install}, and then deployed to Apache Karaf as a stand-alone bundle with \texttt{\$ install -s mvn:org.dreamland./org.dreamland.whitefilter/1.0.0-SNAPSHOT}. Inside Karaf, executing \texttt{http:list} showed that the installed bundle exposed an HTTP service published in the \texttt{/whitefiltered} path, which represented the resource servlet to be secured.
+
+Accessing the servlet resource through e.g. curl, without any credentials, gets a response: ``HTTP ERROR 401. Problem accessing /whitefiltered. Reason: Unauthorized''. Passing the hard-coded, valid credentials adding the \texttt{-u} parameter to curl gets a \texttt{200 OK} response from the web server. If the servlet was accessed from a web browser, then the server returns a cookie alongside the response. This cookie, a very long string, is where the JSON Web Token is stored. In subsequent HTTP requests, the cookie is sent to the server to perform JWT authentication. The response by the servlet does not change, however, so by observing the Karaf log in the \texttt{/system/console/log} it can be confirmed that the JWT authentication worked flawlessly. JWT revokation due to expiration is not implemented, and therefore the same token may be reused as long as the same RSA key is being used by the server to verify the signature of the JWT.
+
+The next step in the evaluation of the implementation was to relocate the authentication logic into the core bundles of the Eclipse SmartHome. Very similar steps were followed, except that the bundle was built from the package \texttt{org.eclipse.smarthome.auth\\.jwt}. First, the logic for basic authentication was put into a custom \texttt{HttpContext} as before. A test resource servlet was also included in this bundle. The activator, however, used the \texttt{HttpService} and \texttt{ServiceTracker} to register the servlet and custom context as an HTTP service in the OSGi runtime. For the previous deployment the registration was made under the whiteboard pattern supported by OSGi 6 implementations. Up to the experimentation of the basic authentication, everything was replicated exactly under the ESH environment. However, when attempting to include the third party library, Nimbus, problems started to arise. Particularly, a persistent class-loading problem for this library has not been solved, not even with the support of a very active developer of the Eclipse SmartHome and openHAB. The exact error is as follows: \texttt{Missing constraint: Import-Package: com.nimbusds.jose}, which suggests that the JAR file is not recognized by the runtime. The usual approach for including third-party libraries into a bundle for ESH is to create a \texttt{lib} directory in the root of the bundle, and put the respective JAR there. Then, the \texttt{build.properties} and \texttt{MANIFEST.MF} files have to be changed to load the classes from the JAR. This same approach has been followed in other bundles in the ESH distribution, such as the \texttt{org.eclipse.smarthome.model.persistence} bundle. However, not even replicating the same structure as this bundle made it possible to recognize the Nimbus JAR.
+
+Essentially, the implementation of basic and JWT authenticators was successfully deployed into the OSGi runtime in Karaf. The testing of the deployment showed no flaws when initiating HTTP requests via curl or the web browser. The deployment of the basic authenticator for the OSGi runtime in ESH was succesfully replicated. It effectively prevent unauthorized access to a servlet resource. However, the deployment of the JWT authenticator for ESH ran into class-loading problems, and thus its effective functioning could not be verified. 
 
 \newpage
 \section{Conclusion}
@@ -978,9 +987,9 @@ The proposed authorization model fulfills the purpose noted at the beginning of 
 
 This work gave an overview of the security challenges present in applications for Internet of Things, particularly in the domain of smart homes. It analyzed the security mechanisms employed in openHAB and Eclipse SmartHome, especially in terms of access control and privacy. Upon observing the lack of authentication and authorization mechanisms, a JSON Web Token-based authenticator was implemented according to the principles of the OSGi framework. An additional basic authenticator was also implemented as fallback in case the client does not make use of JSON Web Tokens. Finally, a somewhat-grained an authorization model was proposed for openHAB. This authorization model distinguishes between users who may have overlapping permissions, but should not have equal control among all resources of the smart home environment.
 
-At the first step of implementation, a custom \texttt{HttpContext} was successfully implemented to intercept all incoming requests toward the registered servlet. Depending on the value returned by the \texttt{handleSecurity} method, access to a resource could be allowed or forbidden. Based on it, implementation of a JSON Web Token was implemented inside the logic of the aforementioned method.In the evaluation of this first step, JWT authentication was successfully enforced for all client requests to the servlet: clients with an invalid token, or with no token at all were denied access to the servlet resource. As the second step of the implementation, a secondary \emph{basic} authenticator was implemented which requested credentials to the client's web browser as a prompt. In the evaluation, first time clients were always asked for credentials to authenticate, and then further requests transitioned into the JWT authentication. Thus, only when the client provided either valid basic credentials or JWT, access to the servlet resource was allowed.
+At the first step of implementation, a custom \texttt{HttpContext} was successfully implemented to intercept all incoming requests toward the registered servlet. Depending on the value returned by the \texttt{handleSecurity} method, access to a resource could be allowed or forbidden. Based on it, implementation of a JSON Web Token was implemented inside the logic of the aforementioned method.In the evaluation of this first step, JWT authentication was successfully enforced for all client requests to the servlet: clients with an invalid token, or with no token at all were denied access to the servlet resource. As the second step of the implementation, a secondary \emph{basic} authenticator was implemented which requested credentials to the client's web browser as a prompt. The evaluation was performed in two stages. The first stage was made outside the ESH runtime, in an isolated OSGi environment. Both the basic and JWT authenticators were effectively able to authenticate incoming HTTP requests to the servlet. First time clients were always asked for credentials to authenticate, and then further requests transitioned into the JWT authentication. Thus, only when the client provided either valid basic credentials or JWT, access to the servlet resource was allowed. The second stage of the evaluation made use of the the same implementation but deployed under the ESH OSGi runtime. Due to class-loading problems, the JWT authenticator was not able to be tested. However, the basic authenticator, which did not depend on external libraries, effectively restricted access to the servlet resource if the credentials were not provided in the header of the HTTP request.
 
-There are several endeavors in terms of implementation that may be considered for future work. First, implementation of a form-based authentication front-end that makes use of the JWT authenticator. Due to the architecture of the Eclipse SmartHome, it is not trivial to plug-in a redirect from every resource to a web form for authentication. Secondly, it remains to solve how to make use of the authenticator for the REST API. At the time of writing, the \emph{merge} of \texttt{HttpContext} has not been made in the development branch of Eclipse SmartHome, and thus experimentation is not yet possible. Thirdly, a concrete definition and implementation of the mechanisms based on the proposed authorization model. Finally, a fresh re-evaluation of the access control mechanisms could be carried out.
+There are several endeavors in terms of implementation that may be considered for future work. First of all, implementation of a form-based authentication front-end that makes use of the JWT authenticator. Due to the architecture of the Eclipse SmartHome, it is not trivial to plug-in a redirect from every resource to a web form for authentication. Second of all, it would be desirable to have an expiration date for the generated JSON Web Tokens, and thus an implementation of the renewal, or rather, re-generation process in these instances. Thirdly, it remains to solve how to make use of the authenticator for the REST API. At the time of writing, the \emph{merge} of \texttt{HttpContext} has not been made in the development branch of Eclipse SmartHome, and thus experimentation is not yet possible. Thirdly, a concrete definition and implementation of the mechanisms based on the proposed authorization model. Finally, a fresh re-evaluation of the access control mechanisms could be carried out.
 
 \newpage
 \section{Extra}
@@ -1205,7 +1214,7 @@ Tip: We can use minipage to create a frame around some important information.
 \newpage
 
 % BibTeX bibliography
-\bibliographystyle{alpha} %plain=[1], alpha=[BGZ09]
+\bibliographystyle{plain}%alpha} %plain=[1], alpha=[BGZ09]
 \bibliography{master-thesis}
 
 \addcontentsline{toc}{section}{\refname}
@@ -1240,10 +1249,10 @@ Tip: We can use minipage to create a frame around some important information.
   }%
   {\section*{Lisad}
   \addcontentsline{toc}{section}{Lisad}}
-
-
+  
 \section*{I. Glossary}
 \addcontentsline{toc}{subsection}{I. Glossary}
+\TODO{FINISH GLOSSARY}
 Bearer token. The digest of the user credentials to be used in an authentication process.
 Manifest. Configuration file for OSGi bundles that define the bundle's unique identification, packages imported from other bundles, and packages to make available to other bundles.
 IP. Internet Protocol.
@@ -1251,6 +1260,8 @@ CoAP.
 HTTPS.
 MQTT.
 Spoofing.
+curl.
+JAR. 
 
 \newpage
 
