--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -1,7 +1,7 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
-% https://www.owasp.org/index.php/Category:OWASP_Top_Ten_2017_Project
+
 % https://docs.openhab.org/installation/security.html
 % https://tools.ietf.org/html/rfc5246
 % https://karaf.apache.org/manual/latest/security
@@ -11,7 +11,21 @@
 % How token-based authentication works https://github.com/Posya/wiki/blob/master/best-practice-for-rest-token-based-authentication-with-jax-rs-and-jersey.adoc
 % JAX-RS Programmatic Security https://dennis-xlc.gitbooks.io/restful-java-with-jax-rs-2-0-2rd-edition/content/en/part1/chapter15/programmatic_security.html
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
-% Orange: the future of digital trust https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf
+
+
+@misc{owasp,
+title = {OWASP Internet of Things Project},
+author = {OWASP community},
+note = {Date accessed: 2018-02-15},
+howpublished = {\url{https://www.owasp.org/index.php/OWASP_Internet_of_Things_Project}}
+}
+
+@misc{orange,
+author = {Orange},
+title = {the future of digital trust},
+howpublished = {\url{https://www.orange.com/en/content/download/21358/412063/version/5/file/Orange+Future+of+Digital+Trust+Report.pdf}},
+note = {Date accessed: 2018-05-05}
+}
 
 @misc{repo_extra,
   title = {JWT and Basic Authenticator implementation outside of Eclipse SmartHome},
